docs: document Phase 5 security, catalog data and packaging